2012-05-29 Riccardo Mottola <rm@gnu.org>

	* Bundles/ALSA/ALSA.m
	First try setting the device to the requested rate without resampling,
	then to 44kHz with resampling.

2012-05-28: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>

	* Bundles/Sndio/Sndio.[h|m]
	cleanup a bit

2012-05-28 Riccardo Mottola <rm@gnu.org>

	* PreferencesController.m
	* Frameworks/Cynthiune/NSViewExtensions.m
	Use centerScanRect to avoid fractional positioning.

2012-05-28: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>

	* Bundles/Sndio/Sndio.[h|m]
	Fix how NativeEndianness is handles
	call prepareDeviceWithChannels:... unconditionally when
	openDevice is called. This is needed when the playing was 
	stopped (sio_stop called) and then started again. When
	the next played song had the same channels/rate/endianness
	the device would not initialized again correctly.

2012-05-25 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>

	* Bundles/Sndio/Sndio.[h|m]
	Introduce locking comparable to AO output bundle.
	Makes Sndio now work for me. Still contains lots of
	debug output, which needs cleanup.

2012-05-21  Philippe Roussel  <p.o.roussel@free.fr>

	* Bundles/ALSA/ALSA.m
	Protect calls with lock.

2012-05-23 Riccardo Mottola <rm@gnu.org>

	* Bundles/AudioFile/GNUmakefile
	* Bundles/AudioFile/GNUmakefile.preamble
	* Bundles/WaveOut/WaveOut.m
	Adapt windows port to new methods and standards.

2012-05-22 Riccardo Mottola <rm@gnu.org>

	* Bundles/ID3Tag/ID3Tag.h
	* Bundles/ID3Tag/ID3Tag.m
	Do not redefine ID3 types.

	* Bundles/MacOSX/MacOSXPlayer.m
	Conform to new endianness parameter.

2012-05-21  Philippe Roussel  <p.o.roussel@free.fr>

	* Bundles/ALSA/ALSA.m
	* Bundles/ALSA/ALSA.h
	Device parameters need to be set when they change from one
	song to another. In that case prepareDeviceWithChannels: is
	called with an open device so check for pcm_handle and set
	params if it's not NULL.
	prepareDeviceWithChannels: is always called before openDevice